--- a/components/SidewaysSelector/SidewaysSelector.module.scss
+++ b/components/SidewaysSelector/SidewaysSelector.module.scss
@@ -9,6 +9,7 @@
   flex: 1;
   margin: 0.8rem;
   font-size: 0.9rem;
+  text-align: end;
   @media screen and (min-width: 450px) {
     font-size: 1rem;
   }
